<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:id="@+id/AppNameTextViewId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        android:textAlignment="center"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="5dp"

        />

    <TextView
        android:id="@+id/AppSloganTextViewId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_slogan"
        android:textSize="15sp"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        android:textAlignment="center"
        android:layout_marginBottom="50dp"

        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:padding="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sd"
            android:textColor="#212121"
            android:textSize="20sp"
            android:textStyle="bold"
            app:drawableStartCompat="@drawable/ic_baseline_add_business_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.04"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.19999999" />
        <Spinner
            android:id="@+id/spinnerdis"
            android:layout_width="200dp"
            android:layout_height="59dp"
            android:dropDownWidth="wrap_content"
            android:entries="@array/arr"
            android:minWidth="200dp"
            android:minHeight="48dp"
            android:spinnerMode="dropdown"
            android:layout_marginStart="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.857"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.194" />



    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:padding="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ssd"
            android:textColor="#263238"
            android:textSize="20sp"
            android:textStyle="bold"
            app:drawableStartCompat="@drawable/ic_baseline_add_business_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.349" />
        <Spinner
            android:id="@+id/spinner2"
            android:layout_width="200dp"
            android:layout_height="59dp"
            android:layout_marginStart="1dp"
            android:dropDownWidth="wrap_content"
            android:entries="@array/distarr"
            android:minWidth="200dp"
            android:minHeight="48dp"
            android:spinnerMode="dropdown"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.857"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.34" />



    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:padding="10dp"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/address"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.038"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.541"
            app:drawableStartCompat="@drawable/ic_baseline_add_business_24"/>


        <EditText
            android:id="@+id/addressedittext"
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/adhint"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textColorHint="#4E342E"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.83"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.55" />

    </LinearLayout>



    <Button
        android:id="@+id/button5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:layout_gravity="center"
        android:textColor="#ff000000"
        android:textStyle="bold"
        android:drawableEnd="@drawable/ic_baseline_how_to_reg_24"
        android:layout_marginTop="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.8" />

    <LinearLayout
        android:layout_marginTop="50dp"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:padding="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/MessageTextViewId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/message_text"
            android:textColor="#212121"
            android:textSize="20sp"
            android:textStyle="bold"
            app:drawableStartCompat="@drawable/ic_baseline_how_to_reg_24" />
        <Button
            android:id="@+id/ButtonId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_text"
            android:textSize="13sp"
            android:textStyle="bold"
            android:textAllCaps="false"
            android:drawableEnd="@drawable/ic_baseline_login_24"
            />
    </LinearLayout>

</LinearLayout>